--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: DigitalDefenseHub
+# email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  DigitalDefenseHub: A Research Hub convening leading experts to tackle adversarial synthetic media. Fostering idea exchange, collaboration, and publishing insights to advance digital security and resilience. Help us create a safer and more resilient digital landscape.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://digitaldefense.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+# twitter_username: jekyllrb
+github_username:  DigitalDefense
 
 # Build settings
 theme: minima
